--- a/assignment1/Solucion.nb.html
+++ b/assignment1/Solucion.nb.html
@@ -3365,6 +3365,9 @@ AIC: 95.5339</code></pre>
 <h3>Resumen modelos</h3>
 <!-- rnb-text-end -->
 <!-- rnb-chunk-begin -->
+<p>Registered S3 methods overwritten by ‘htmltools’: method from<br />
+print.html tools:rstudio print.shiny.tag tools:rstudio
+print.shiny.tag.list tools:rstudio</p>
 
 <!-- rnb-html-begin eyJtZXRhZGF0YSI6eyJjbGFzc2VzIjpbImtuaXRfYXNpcyJdLCJzaXppbmdQb2xpY3kiOltdfX0= -->
 
